<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:orientation="vertical"
    android:id="@+id/west_menu_container">

    <TextView
        android:id="@+id/tv_entrees_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/charcoal"
        android:text="@string/entrees"/>

    <TextView
        android:id="@+id/tv_entrees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/charcoal"
        tools:text="Apple pie, French silk pie, Pumpking pie, Pecan pie"/>

    <TextView
        android:id="@+id/tv_woodstone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/charcoal"
        android:text="@string/woodstone"/>

    <TextView
        android:id="@+id/tv_woodstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/charcoal"
        tools:text="Apple pie, French silk pie, Pumpking pie, Pecan pie"/>

    <TextView
        android:id="@+id/tv_starches_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/charcoal"
        android:text="@string/starches"/>

    <TextView
        android:id="@+id/tv_starches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/charcoal"
        tools:text="Apple pie, French silk pie, Pumpking pie, Pecan pie"/>

    <TextView
        android:id="@+id/tv_vegetables_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/charcoal"
        android:text="@string/vegetables"/>

    <TextView
        android:id="@+id/tv_vegetables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/charcoal"
        tools:text="Apple pie, French silk pie, Pumpking pie, Pecan pie"/>

    <TextView
        android:id="@+id/tv_soups_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/charcoal"
        android:text="@string/soups"/>

    <TextView
        android:id="@+id/tv_soups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/charcoal"
        tools:text="Apple pie, French silk pie, Pumpking pie, Pecan pie"/>

    <TextView
        android:id="@+id/tv_desserts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/charcoal"
        android:text="@string/desserts"/>

    <TextView
        android:id="@+id/tv_desserts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/charcoal"
        tools:text="Apple pie, French silk pie, Pumpking pie, Pecan pie"/>

    <TextView
        android:id="@+id/tv_other_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/charcoal"
        android:text="@string/other"/>

    <TextView
        android:id="@+id/tv_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/charcoal"
        tools:text="Apple pie, French silk pie, Pumpking pie, Pecan pie"/>

</LinearLayout>